# ssshmup

./: Cargo.toml  README.md
resources.bak/resources/: shoot.wave
src/: components.rs  game_state.rs  main.rs  systems.rs
src/ecs/: components.rs  resources.rs
src/ecs/systems/: components.rs  enemy_systems.rs  misc_systems.rs  mod.rs  player_systems.rs  star_systems.rs
