[package]
name = "game"
version = "0.1.0"
authors = ["Mikail Khan <mikail.khan45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
specs = { version = "0.15.1", features = ["specs-derive", "serde"] }
rand = "0.7.3"

[profile.dev.package."*"]
opt-level = 3
