[package]
name = "ssshmup"
version = "0.5.0"
authors = ["Mikail Khan <mikail.khan45@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = { version = "0.15.1", features = ["specs-derive", "serde"] }
rand = "0.7.3"
simple_logger = "1.6.0"
log = "0.4.5"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"

[features]
draw_hitboxes = []
print_fps = []
